# Rianixia-ThermalCore

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: android_ffi.rs  constants.rs  context.rs  cooling.rs  cpu.rs  effectiveness.rs  learning.rs  lib.rs  main.rs  monitor.rs  policy_manager.rs  prediction.rs  simulator.rs  state.rs  thermal_zones.rs  utils.rs
